more tests, removing headers from new protocol

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ minversion=3.5.3
 envlist = test-{linux, osx, win}
 
 [testenv]
-basepython = {env:PV_PY_PATH}
+basepython = {env:PV_PY_PATH:python}
 
 platform =
   linux: linux2
@@ -24,8 +24,8 @@ changedir = {toxinidir}/tests
 commands =
   pytest {posargs}
 
-passenv =
-  PV_FIPS_CRYPTO_LIB
+setenv =
+  PV_FIPS_CRYPTO_LIB = {env:PV_FIPS_CRYPTO_LIB:/usr/local/lib/libfips-crypto.dylib}
 
 [testenv:flake8]
 skip_install = true
