--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ commands =
   pytest {posargs}
 
 setenv =
-  PV_FIPS_CRYPTO_LIB = {env:PV_FIPS_CRYPTO_LIB:/usr/local/lib/libfips-crypto.dylib}
+  ; PV_FIPS_CRYPTO_LIB = {env:PV_FIPS_CRYPTO_LIB:/usr/local/lib/libfips-crypto.dylib}
 
 [testenv:flake8]
 skip_install = true
