finalize integration, tests

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ platform =
   win: win32
 
 deps =
-  -e /opt/fips-crypto/python
+  ; -e /opt/fips-crypto/python
   pytest >= 3.9.1
   -rrequirements.txt
   linux: -rrequirements_linux.txt
