--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist = test-{linux, osx, win}
 
 [testenv]
 basepython = {env:PV_PY_PATH:python}
+install_command = {envpython} -m pip install --no-cache-dir {packages}
 
 platform =
   linux: linux2
