--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@ envlist = test-{linux, osx, win}
 [testenv]
 basepython = {env:PV_PY_PATH:python}
 install_command = {envpython} -m pip install --no-cache-dir {packages}
+alwayscopy = true
+sitepackages = false
 
 platform =
   linux: linux2
