tox installs properly , ignoring pep425 restrictions

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,10 @@ envlist = test-{linux, osx, win}
 
 [testenv]
 basepython = {env:PV_PY_PATH:python}
-install_command = {envpython} -m pip install --no-cache-dir {packages}
+install_command = {envpython} -m pip install --no-cache-dir {packages} --target {envsitepackagesdir}
 alwayscopy = true
 sitepackages = false
+skip_install = true
 
 platform =
   linux: linux2
@@ -14,7 +15,6 @@ platform =
   win: win32
 
 deps =
-  pytest >= 3.9.1
   -rrequirements.txt
   linux: -rrequirements_linux.txt
   osx: -rrequirements_osx.txt
@@ -24,6 +24,8 @@ deps =
 changedir = {toxinidir}/tests
 
 commands =
+  {envpython} -m pip install --no-cache-dir --no-index --no-deps {toxinidir}
+  {envpython} -m pip install pytest>=3.9.1
   pytest {posargs}
 
 setenv =
