--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,9 @@ https://github.com/PreVeil/vendor/raw/master/python/flanker-0.4.40+preveil1.10.t
 https://github.com/PreVeil/vendor/raw/master/python/chardet-3.0.4-py2.py3-none-any.whl
 
 https://github.com/PreVeil/vendor/raw/master/python/semver-2.7.7.tar.gz
+https://github.com/PreVeil/vendor/raw/pywin32_certifi/python/python_certifi_win32-1.4-py2.py3-none-any.whl
+
+# needed by python_certifi_win32
+https://github.com/PreVeil/vendor/raw/pywin32_certifi/python/wincertstore-0.2-py2.py3-none-any.whl
+https://github.com/PreVeil/vendor/raw/pywin32_certifi/python/wrapt-1.11.1.tar.gz
+https://github.com/PreVeil/vendor/raw/pywin32_certifi/python/setuptools_scm-3.3.3-py2.py3-none-any.whl
