--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ changedir = {toxinidir}/tests
 commands =
   {envpython} -m pip install --no-cache-dir --no-index --no-deps {toxinidir}
   {envpython} -m pip install pytest>=3.9.1
+  {envpython} -m pip install requests-mock==1.6.0
   pytest {posargs}
 
 setenv =
