add logging to session enumeration, port connection_info to pvHelpers

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,8 @@ platform =
   win: win32
 
 deps =
+  pytest>=3.9.1
+  requests-mock==1.6.0
   -rrequirements.txt
   linux: -rrequirements_linux.txt
   osx: -rrequirements_osx.txt
@@ -25,9 +27,7 @@ changedir = {toxinidir}/tests
 
 commands =
   {envpython} -m pip install --no-cache-dir --no-index --no-deps {toxinidir}
-  {envpython} -m pip install pytest>=3.9.1
-  {envpython} -m pip install requests-mock==1.6.0
-  pytest {posargs}
+  {envpython} -m pytest {posargs}
 
 setenv =
   ; PV_FIPS_CRYPTO_LIB = {env:PV_FIPS_CRYPTO_LIB:/usr/local/lib/libfips-crypto.dylib}
