rebase core master

--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,8 @@ setenv =
   ; PV_FIPS_CRYPTO_LIB = {env:PV_FIPS_CRYPTO_LIB:/usr/local/lib/libfips-crypto.dylib}
 
 [testenv:flake8]
-skip_install = true
+install_command =
+  {envpython} -m pip install {packages}
 
 changedir = {toxinidir}
 
@@ -44,7 +45,7 @@ deps =
   pep8-naming
 
 commands =
-  {envpython} -m flake8 {posargs}
+  flake8 {posargs}
 
 
 ; Linting config
@@ -52,7 +53,8 @@ commands =
 exclude =
     .tox,
     *.pyc,
-    *.egg-info
+    *.egg-info,
+    __init__.py
 
 max-complexity = 10
 
