fix errors, remove mutex, improve interfaces, lint new files

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ platform =
 
 deps =
   pytest>=3.9.1
+  mock==3.0.5
   requests-mock==1.6.0
   -rrequirements.txt
   linux: -rrequirements_linux.txt
@@ -31,6 +32,7 @@ commands =
 
 setenv =
   ; PV_FIPS_CRYPTO_LIB = {env:PV_FIPS_CRYPTO_LIB:/usr/local/lib/libfips-crypto.dylib}
+  TMPDIR = {envtmpdir}
 
 [testenv:flake8]
 skip_install = true
