add remote keys,refac misc, add a minimal makefile

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ setenv =
   ; PV_FIPS_CRYPTO_LIB = {env:PV_FIPS_CRYPTO_LIB:/usr/local/lib/libfips-crypto.dylib}
   TMPDIR = {envtmpdir}
 
-[testenv:flake8]
+[testenv:lint]
 install_command =
   {envpython} -m pip install {packages}
 
@@ -50,7 +50,7 @@ commands =
   flake8 {posargs}
 
 
-; Linting config
+; flake8 config
 [flake8]
 exclude =
     src/pvHelpers/protos,
