--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion=3.5.3
-envlist = test-{linux, osx, win}
+envlist = test-{linux, darwin, win}
 
 [testenv]
 basepython = {env:PV_PY_PATH:python}
@@ -11,7 +11,7 @@ skip_install = true
 
 platform =
   linux: linux2
-  osx: darwin
+  darwin: darwin
   win: win32
 
 deps =
@@ -20,7 +20,7 @@ deps =
   requests-mock==1.6.0
   -rrequirements.txt
   linux: -rrequirements_linux.txt
-  osx: -rrequirements_osx.txt
+  darwin: -rrequirements_darwin.txt
   win: -rrequirements_win.txt
 
 
