patch windows test run

--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,7 @@ changedir = {toxinidir}/tests
 
 commands =
   {envpython} -m pip install --no-cache-dir --no-index --no-deps {toxinidir}
+  {envpython} -m pip install --upgrade pywin32 # newer versions properly locate dlls which we currently do with a script on installation time (we'd move to newer version)
   {envpython} -m pytest {posargs}
 
 setenv =
@@ -55,6 +56,7 @@ commands =
 exclude =
     src/pvHelpers/protos,
     .tox,
+    .venv,
     *.pyc,
     *.egg-info,
     __init__.py
