--- a/tox.ini
+++ b/tox.ini
@@ -27,8 +27,9 @@ deps =
 changedir = {toxinidir}/tests
 
 commands =
+  {envpython} -m pip install --upgrade pip==19.3
   {envpython} -m pip install --no-cache-dir --no-index --no-deps {toxinidir}
-  {envpython} -m pip install --upgrade pywin32 # newer versions properly locate dlls which we currently do with a script on installation time (we'd move to newer version)
+  win: {envpython} -m pip install --upgrade pywin32 # newer versions properly locate dlls which we currently do with a script on installation time (we'd move to newer version)
   {envpython} -m pytest {posargs}
 
 setenv =
