--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ platform =
   win: win32
 
 deps =
-  pytest>=3.9.1
+  pytest==3.9.1
   mock==3.0.5
   requests-mock==1.6.0
   -rrequirements.txt
@@ -28,7 +28,7 @@ changedir = {toxinidir}/tests
 
 commands =
   {envpython} -m pip install --no-cache-dir --no-index --no-deps {toxinidir}
-  {envpython} -m pip install --upgrade pywin32 # newer versions properly locate dlls which we currently do with a script on installation time (we'd move to newer version)
+  win: {envpython} -m pip install --upgrade pywin32 # newer versions properly locate dlls which we currently do with a script on installation time (we'd move to newer version)
   {envpython} -m pytest {posargs}
 
 setenv =
@@ -48,7 +48,7 @@ deps =
   pep8-naming
 
 commands =
-  flake8 {posargs}
+  {envpython} -m flake8 {posargs}
 
 
 ; flake8 config
@@ -68,3 +68,8 @@ max-line-length = 120
 import-order-style = google
 
 format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
+
+inline-quotes = "
+multiline-quotes = """
+docstring-quotes = """
+avoid-escape = False
