add tests, bump version

--- a/tox.ini
+++ b/tox.ini
@@ -46,13 +46,14 @@ deps =
   pep8-naming
 
 commands =
-  flake8 {posargs}
+  {envpython} -m flake8 {posargs}
 
 
 ; Linting config
 [flake8]
 exclude =
     .tox,
+    .venv,
     *.pyc,
     *.egg-info
 
