--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,13 @@ https://github.com/PreVeil/vendor/raw/master/python/libnacl-1.4.5+preveil1-py2-n
 https://github.com/PreVeil/vendor/raw/mikeb/flanker-0.9.11/python/flanker-0.9.11%2Bpreveil1-py2.py3-none-any.whl
 https://github.com/PreVeil/vendor/raw/master/python/chardet-3.0.4-py2.py3-none-any.whl
 
-https://github.com/PreVeil/vendor/raw/master/python/semver-2.7.7.tar.gz
-https://github.com/PreVeil/vendor/raw/master/python/pem-19.1.0-py2.py3-none-any.whl
+# required by flanker
+https://github.com/PreVeil/vendor/raw/master/python/attrs-18.1.0-py2.py3-none-any.whl
+https://github.com/PreVeil/vendor/raw/master/python/ply-3.11-py2.py3-none-any.whl
+https://github.com/PreVeil/vendor/raw/master/python/tld-0.12.6-py27-none-any.whl
+https://github.com/PreVeil/vendor/raw/master/python/typing-3.10.0.0-py2-none-any.whl
+https://github.com/PreVeil/vendor/raw/master/python/backports.functools_lru_cache-1.6.4-py2.py3-none-any.whl
+https://github.com/PreVeil/vendor/raw/master/python/WebOb-1.6.1.tar.gz
+https://github.com/PreVeil/vendor/raw/master/python/pycparser-2.20-py2.py3-none-any.whl
+https://github.com/PreVeil/vendor/raw/master/python/ipaddress-1.0.23-py2.py3-none-any.whl
+https://github.com/PreVeil/vendor/raw/master/python/enum34-1.1.2.tar.gz
