--- a/requirements_osx.txt
+++ b/requirements_osx.txt
@@ -3,3 +3,8 @@ https://github.com/PreVeil/vendor/raw/master/python/pysqlite-2.8.3.1-cp27-cp27m-
 https://github.com/PreVeil/vendor/raw/master/python/simplejson-3.8.2-cp27-cp27m-macosx_10_9_x86_64.whl
 https://github.com/PreVeil/vendor/raw/master/python/fipscrypto-1.2.1-cp27-cp27m-macosx_10_11_x86_64.whl
 https://github.com/PreVeil/vendor/raw/master/python/pacparser-1.3.7-cp27-cp27m-macosx_10_14_x86_64.whl
+
+# required by flanker
+https://github.com/PreVeil/vendor/raw/master/python/regex-0.1.20110315.tar.gz
+https://github.com/PreVeil/vendor/raw/master/python/cffi-1.14.0-cp27-cp27m-macosx_10_9_x86_64.whl
+https://github.com/PreVeil/vendor/raw/master/python/cryptography-3.2-cp27-cp27m-macosx_10_10_x86_64.whl
