--- a/requirements_win.txt
+++ b/requirements_win.txt
@@ -5,3 +5,8 @@ https://github.com/PreVeil/vendor/raw/master/python/fipscrypto-1.2.1-cp27-cp27m-
 https://github.com/PreVeil/vendor/raw/master/python/pywin32-220-cp27-none-win32.whl
 https://github.com/PreVeil/vendor/raw/master/python/pacparser-1.3.7-cp27-cp27m-win32.whl
 https://github.com/PreVeil/vendor/raw/master/python/wincertstore-0.2-py2.py3-none-any.whl
+
+# required by flanker
+https://github.com/PreVeil/vendor/raw/master/python/regex-0.1.20110315-cp27-cp27m-win32.whl
+https://github.com/PreVeil/vendor/raw/master/python/cffi-1.14.0-cp27-cp27m-win32.whl
+https://github.com/PreVeil/vendor/raw/master/python/cryptography-3.2-cp27-cp27m-win32.whl
