--- a/requirements_osx.txt
+++ b/requirements_osx.txt
@@ -3,9 +3,11 @@ https://github.com/PreVeil/vendor/raw/master/python/pysqlite-2.8.3.1-cp27-cp27m-
 https://github.com/PreVeil/vendor/raw/master/python/simplejson-3.8.2-cp27-cp27m-macosx_10_9_x86_64.whl
 https://github.com/PreVeil/vendor/raw/master/python/pacparser-1.3.7-cp27-cp27m-macosx_10_14_x86_64.whl
 
-https://github.com/PreVeil/vendor/raw/refs/heads/pavel/DA-2731-py2to3/python3/fipscrypto-2.0.1-cp27-cp27m-macosx_10_9_x86_64.whl
 
 # required by flanker
 https://github.com/PreVeil/vendor/raw/master/python/regex-0.1.20110315.tar.gz
 https://github.com/PreVeil/vendor/raw/master/python/cffi-1.14.0-cp27-cp27m-macosx_10_9_x86_64.whl
 https://github.com/PreVeil/vendor/raw/master/python/cryptography-3.2-cp27-cp27m-macosx_10_10_x86_64.whl
+
+# fipscrypto
+https://pv-bin-storage.s3.amazonaws.com/ci/fipscrypto_build_osx/5b08db02589a1024c385d26c78651be5be69d5f4/fipscrypto-2.0.1-cp27-cp27m-macosx_10_9_x86_64.whl
