--- a/requirements_win.txt
+++ b/requirements_win.txt
@@ -5,9 +5,10 @@ https://github.com/PreVeil/vendor/raw/master/python/pywin32-220-cp27-none-win32.
 https://github.com/PreVeil/vendor/raw/master/python/pacparser-1.3.7-cp27-cp27m-win32.whl
 https://github.com/PreVeil/vendor/raw/master/python/wincertstore-0.2-py2.py3-none-any.whl
 
-https://github.com/PreVeil/vendor/raw/refs/heads/pavel/DA-2731-py2to3/python3/fipscrypto-2.0.1-cp27-cp27m-win32.whl
-
 # required by flanker
 https://github.com/PreVeil/vendor/raw/master/python/regex-0.1.20110315-cp27-cp27m-win32.whl
 https://github.com/PreVeil/vendor/raw/master/python/cffi-1.14.0-cp27-cp27m-win32.whl
 https://github.com/PreVeil/vendor/raw/master/python/cryptography-3.2-cp27-cp27m-win32.whl
+
+# fipscrypto
+https://pv-bin-storage.s3.amazonaws.com/ci/fipscrypto_build_win_32/5b08db02589a1024c385d26c78651be5be69d5f4/fipscrypto-2.0.1-cp27-cp27m-win32.whl
